force-app/main/default/objects/TalkDesk_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>Talk Desk Extension</description>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User attached to extension</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TalkDesk_Extensions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TalkDesk Extension</label>
    <listViews>
        <fullName>All_Extension</fullName>
        <columns>NAME</columns>
        <columns>Extension__c</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Extension</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>TalkDesk Extension  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TalkDesk Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>